apps/base/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
  namespace: esphome
spec:
  type: ClusterIP
  selector:
    app: esphome
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
